Added/extended tool pages: AIGEN, Alive2, Alt-Ergo, Z3, Violat

--- a/Tools/Solvers/SMT/Z3.md
+++ b/Tools/Solvers/SMT/Z3.md
@@ -3,26 +3,39 @@ Z3
 
 #### Application domain/field:
 SMT (Satisfiability Modulo Theories)
+SMT solving
 
 #### Type of tool (e.g. model checker, test generator):
 SMT solver
 
-#### URIs (github, websites, etc.):
-https://github.com/Z3Prover/z3
+#### Expected input thing:
+SMT formula
 
-#### Expected input:
-SMT formula in SMTLIB2 format
+#### Expected input format:
+[SMT-LIB](SMT-LIB.md) v2 format
 
 There are bindings for .NET, C, C++, Java, OCaml, Python, Julia and Web Assembly
 
 #### Expected output:
-`sat` or `unsat`
+`sat`, `unsat` or `unknown`
 
 #### Internals (tools used, frameworks, techniques, paradigms, ...):
 
+#### Comments:
+-
+
+#### URIs (github, websites, etc.):
+https://github.com/Z3Prover/z3
+
+#### Last commit date:
+30 September 2021
+
 #### Last publication date:
+April 2015
 
 #### List of related papers:
-https://doi.org/10.1007/978-3-540-78800-3_24
+https://doi.org/10.1007/978-3-540-78800-3_24 (TACAS '08)
+https://doi.org/10.1007/978-3-662-46681-0_14 (TACAS '15)
+See also: https://github.com/Z3Prover/z3/wiki/Publications
 
-
+#### Related tools (tools mentioned or compared to in the paper):
