Add missing info

--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -88,6 +88,7 @@
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_23) [[STMC]] - Statistical Model Checker with Stratified and Antithetic Sampling.
 	[Nima Roohi](https://dblp.org/pid/93/7539.html), [Yu Wang](https://dblp.org/pid/02/5889-44.html), [Matthew West](https://dblp.org/pid/16/1726-1.html), [Geir E. Dullerud](https://dblp.org/pid/d/GeirEDullerud.html), [Mahesh Viswanathan](https://dblp.org/pid/23/2759-1.html)
 	✅ Presents [[STMC]]
+	✅ Compares to [PRISM](PRISM.md), [[MRMC]], [[VESTA]], [[YMER]], [[COSMOS]], [[PLASMA]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_33) Must Fault Localization for Program Repair.
 	[Bat-Chen Rothenberg](https://dblp.org/pid/189/1034.html), [Orna Grumberg](https://dblp.org/pid/g/OrnaGrumberg.html)
 	✅ Implemented in [[AllRepair]]
