Adjust some descriptions

--- a/Conferences/CAV 2021.md
+++ b/Conferences/CAV 2021.md
@@ -121,6 +121,7 @@
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_22) An Iterative Scheme of Safe Reinforcement Learning for Nonlinear Systems via Barrier Certificate Generation.
 	[Zhengfeng Yang](https://dblp.org/pid/68/3884.html), [Yidan Zhang](https://dblp.org/pid/11/8540.html), [Wang Lin](https://dblp.org/pid/36/5376.html), [Xia Zeng](https://dblp.org/pid/62/6760.html), [Xiaochao Tang](https://dblp.org/pid/297/3667.html), [Zhenbing Zeng](https://dblp.org/pid/56/2636.html), [Zhiming Liu ](https://dblp.org/pid/l/ZhimingLiu1.html)
 	✅ Presents [[SRLBC]]
+	✅ Uses [[nncontroller]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_29) Effective Hybrid System Falsification Using Monte Carlo Tree Search Guided by QB-Robustness.
 	[Zhenya Zhang](https://dblp.org/pid/98/4896.html), [Deyun Lyu](https://dblp.org/pid/292/9181.html), [Paolo Arcaini](https://dblp.org/pid/86/7855.html), [Lei Ma ](https://dblp.org/pid/20/6534-3.html), [Ichiro Hasuo](https://dblp.org/pid/26/4542.html), [Jianjun Zhao](https://dblp.org/pid/71/6948.html)
 	✅ Presents [[ForeSee]]
