Update link format for tools in Tools/Checkers, the links are now clickable on github

--- a/Conferences/CAV 2021.md
+++ b/Conferences/CAV 2021.md
@@ -3,7 +3,7 @@
 ---
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_16) Stateless Model Checking Under a Reads-Value-From Equivalence.
 	[Pratyush Agarwal](https://dblp.org/pid/206/9608.html), [Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Shreya Pathak](https://dblp.org/pid/292/8413.html), [Andreas Pavlogiannis](https://dblp.org/pid/47/8037.html), [Viktor Toman](https://dblp.org/pid/215/3408.html)
-	✅ Extends [Nidhugg](Nidhugg)
+	✅ Extends [Nidhugg](../Tools/Nidhugg.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_30) Fast Zone-Based Algorithms for Reachability in Pushdown Timed Automata.
 	[S. Akshay](https://dblp.org/pid/28/6534.html), [Paul Gastin](https://dblp.org/pid/g/PaulGastin.html), [Karthik R. Prakash](https://dblp.org/pid/293/8772.html)
 	✅ Extends [TChecker](TChecker.md)
