Add tool page for Yices. Update links to Yices. Update link format in Tools/Frameworks

--- a/Conferences/CAV 2021(2).md
+++ b/Conferences/CAV 2021(2).md
@@ -60,7 +60,7 @@
 	✅ Presents [[AIGEN]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_13) Interpolation and Model Checking for Nonlinear Arithmetic.
 	[Dejan Jovanovic](https://dblp.org/pid/56/2451.html), [Bruno Dutertre](https://dblp.org/pid/d/BDutertre.html)
-	✅ Extends [Yices](Yices)
+	✅ Extends [Yices](../Tools/Solvers/SMT/Yices.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_28) Enforcing Almost-Sure Reachability in POMDPs.
 	[Sebastian Junges](https://dblp.org/pid/115/4386.html), [Nils Jansen ](https://dblp.org/pid/32/8421-1.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
 	✅ Prototype implementation. Artifact available at: https://github.com/sjunges/shielding-POMDPs and https://zenodo.org/record/4784940
