Added tool page for PicoSAT. Updated links in Tools/Solvers to clickable format

--- a/Tools/Solvers/SMT/Z3.md
+++ b/Tools/Solvers/SMT/Z3.md
@@ -12,7 +12,7 @@ SMT solver
 SMT formula
 
 #### Expected input format:
-[SMT-LIB](SMT-LIB.md) v2 format
+[SMT-LIB](../../../Formats/SMT-LIB.md) v2 format
 
 There are bindings for .NET, C, C++, Java, OCaml, Python, Julia and Web Assembly
 
