--- a/Conferences/CAV 2021(2).md
+++ b/Conferences/CAV 2021(2).md
@@ -24,10 +24,10 @@
 	✅ Presents [[LLMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_14) An SMT Solver for Regular Expressions and Linear Arithmetic over String Length.
 	[Murphy Berzish](https://dblp.org/pid/180/5429.html), [Mitja Kulczynski](https://dblp.org/pid/241/9575.html), [Federico Mora](https://dblp.org/pid/82/5093.html), [Florin Manea](https://dblp.org/pid/67/4899.html), [Joel D. Day](https://dblp.org/pid/130/7599.html), [Dirk Nowotka](https://dblp.org/pid/91/2495.html), [Vijay Ganesh](https://dblp.org/pid/g/VijayGanesh.html)
-	✅ Presents [[../Tools/Z3str3RE]], expands [Z3](Z3.md)
+	✅ Presents [Z3str3RE](../Tools/Z3str3RE.md), expands [Z3](Z3.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_10) Efficient SMT-Based Analysis of Failure Propagation.
 	[Marco Bozzano](https://dblp.org/pid/66/3003.html), [Alessandro Cimatti](https://dblp.org/pid/13/5961.html), [Anthony Fernandes Pires](https://dblp.org/pid/85/10271.html), [Alberto Griggio](https://dblp.org/pid/19/3686.html), [Martin Jonás](https://dblp.org/pid/178/4046.html), [Greg Kimberly](https://dblp.org/pid/96/3814.html)
-	✅ Presents [[../Tools/SMT-PGFPS]], presented as a prototypical implementation. Compared to [[../Tools/xSAP]] and [[Emmy]].
+	✅ Presents [SMT-PGFPS](../Tools/SMT-PGFPS.md), presented as a prototypical implementation. Compared to [xSAP](../Tools/xSAP.md) and [[Emmy]].
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_42) Diffy - Inductive Reasoning of Array Programs Using Difference Invariants.
 	[Supratik Chakraborty](https://dblp.org/pid/34/4525.html), [Ashutosh Gupta](https://dblp.org/pid/65/3925.html), [Divyesh Unadkat](https://dblp.org/pid/133/4630.html)
 	✅ Presents [[Diffy]]
@@ -126,4 +126,4 @@
 	✅ Presents [[Certifaiger]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81688-9_3) Reflections on Termination of Linear Loops.
 	[Shaowei Zhu ](https://dblp.org/pid/159/8704-1.html), [Zachary Kincaid](https://dblp.org/pid/61/6578.html)
-	✅ Expands [[../Tools/ComPACT]]. They refer to their tool/algorithm as $mp_{LR}$ (mortal preconditions via linear reflections). Artifact: https://zenodo.org/record/4742843
+	✅ Expands [ComPACT](../Tools/ComPACT.md). They refer to their tool/algorithm as $mp_{LR}$ (mortal preconditions via linear reflections). Artifact: https://zenodo.org/record/4742843
