--- a/Conferences/CAV 2021.md
+++ b/Conferences/CAV 2021.md
@@ -9,16 +9,16 @@
 	✅ Extends [TChecker](TChecker.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_41) Adapting Behaviors via Reactive Synthesis.
 	[Gal Amram](https://dblp.org/pid/132/9195.html), [Suguman Bansal](https://dblp.org/pid/217/4777.html), [Dror Fried](https://dblp.org/pid/74/9853.html), [Lucas Martinelli Tabajara](https://dblp.org/pid/137/3715.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html), [Gera Weiss](https://dblp.org/pid/52/1274.html)
-	✅ Presents [[../Tools/SGR(k)]]
+	✅ Presents [SGR(k)](../Tools/SGR(k).md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_26) IMITATOR 3 - Synthesis of Timing Parameters Beyond Decidability.
 	[Étienne André](https://dblp.org/pid/49/2992.html)
-	✅ Extends [[../Tools/IMITATOR]]
+	✅ Extends [IMITATOR](../Tools/IMITATOR.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_40) PAYNT - A Tool for Inductive Synthesis of Probabilistic Programs.
 	[Roman Andriushchenko](https://dblp.org/pid/284/2809.html), [Milan Ceska ](https://dblp.org/pid/213/3728.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Simon Stupinský](https://dblp.org/pid/297/3712.html)
-	✅ Presents [[../Tools/PAYNT]]
+	✅ Presents [PAYNT](../Tools/PAYNT.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_14) Isla - Integrating Full-Scale ISA Semantics and Axiomatic Concurrency Models.
 	[Alasdair Armstrong](https://dblp.org/pid/85/10670.html), [Brian Campbell ](https://dblp.org/pid/58/4171-1.html), [Ben Simner](https://dblp.org/pid/202/8946.html), [Christopher Pulte](https://dblp.org/pid/173/9501.html), [Peter Sewell](https://dblp.org/pid/74/185.html)
-	✅ Presents [[../Tools/Isla]]
+	✅ Presents [Isla](../Tools/Isla.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_42) Causality-Based Game Solving.
 	[Christel Baier](https://dblp.org/pid/b/ChristelBaier.html), [Norine Coenen](https://dblp.org/pid/167/7922.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Florian Funke ](https://dblp.org/pid/69/9320-2.html), [Simon Jantsch](https://dblp.org/pid/222/4864.html), [Julian Siber](https://dblp.org/pid/293/9557.html)
 	✅ Presents [[CabPy]]
@@ -33,7 +33,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_38) Program Sketching by Automatically Generating Mocks from Tests.
 	[Nate F. F. Bragg](https://dblp.org/pid/297/3635.html), [Jeffrey S. Foster](https://dblp.org/pid/18/2050.html), [Cody Roux](https://dblp.org/pid/02/7115.html), [Armando Solar-Lezama](https://dblp.org/pid/95/6919.html)
-	✅ Presents [[../Tools/Sketcham]], expands [[Sketch]]
+	✅ Presents [Sketcham](../Tools/Sketcham.md), expands [[Sketch]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_36) Pre-deployment Security Assessment for Cloud Services Through Semantic Reasoning.
 	[Claudia Cauli](https://dblp.org/pid/201/5360.html), [Meng Li](https://dblp.org/pid/70/1726.html), [Nir Piterman](https://dblp.org/pid/p/NPiterman.html), [Oksana Tkachuk](https://dblp.org/pid/88/4695.html)
 	✅ Presents [[CloudFORMAL]]
@@ -54,13 +54,13 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_39) Counterexample-Guided Partial Bounding for Recursive Function Synthesis.
 	[Azadeh Farzan](https://dblp.org/pid/89/148.html), [Victor Nicolet](https://dblp.org/pid/194/2361.html)
-	✅ Presents [[../Tools/Synduce]]
+	✅ Presents [Synduce](../Tools/Synduce.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_32) Not All Bugs Are Created Equal, But Robust Reachability Can Tell the Difference.
 	[Guillaume Girol](https://dblp.org/pid/272/7154.html), [Benjamin Farinier](https://dblp.org/pid/215/4462.html), [Sébastien Bardin](https://dblp.org/pid/b/SebastienBardin.html)
 	✅ Presents [BINSEC/RSE](BINSEC-RSE.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_2) Balancing Automation and Control for Formal Verification of Microprocessors.
 	[Shilpi Goel](https://dblp.org/pid/129/1546.html), [Anna Slobodová](https://dblp.org/pid/34/5435.html), [Rob Sumners](https://dblp.org/pid/88/4004.html), [Sol Swords](https://dblp.org/pid/06/513.html)
-	✅ Presents [[../Tools/FGL]]
+	✅ Presents [FGL](../Tools/FGL.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_7) Robustness Verification of Quantum Classifiers.
 	[Ji Guan](https://dblp.org/pid/205/2739.html), [Wang Fang](https://dblp.org/pid/65/2225.html), [Mingsheng Ying](https://dblp.org/pid/13/6525.html)
 	✅ Implemented on TensorFlow Quantum. Tool does not seem to have a name or an publicly available implementation.
@@ -72,7 +72,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_11) Verisig 2.0 - Verification of Neural Network Controllers Using Taylor Model Preconditioning.
 	[Radoslav Ivanov](https://dblp.org/pid/144/4256.html), [Taylor J. Carpenter](https://dblp.org/pid/229/8553.html), [James Weimer](https://dblp.org/pid/79/11048.html), [Rajeev Alur](https://dblp.org/pid/a/RAlur.html), [George J. Pappas](https://dblp.org/pid/p/GeorgeJPappas.html), [Insup Lee](https://dblp.org/pid/l/InsupLee.html)
-	✅ Extends [[../Tools/Verisig]]
+	✅ Extends [Verisig](../Tools/Verisig.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_18) Delay-Bounded Scheduling Without Delay!
 	[Andrew Johnson](https://dblp.org/pid/69/2358.html), [Thomas Wahl](https://dblp.org/pid/72/5272.html)
 	✅ Seems to be only prototype implementations of the proposed algorithms. Artifact: https://zenodo.org/record/4831590
