Extended tool pages: EMTST, ERAN, ESBMC, Endicheck. Moved E-QED.

--- a/Conferences/CAV 2017(2).md
+++ b/Conferences/CAV 2017(2).md
@@ -81,7 +81,7 @@
 	✅ Extends [Automata](Automata.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63390-9_6) E-QED - Electrical Bug Localization During Post-silicon Validation Enabled by Quick Error Detection and Formal Methods.
 	[Eshan Singh](https://dblp.org/pid/05/9680.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html), [Subhasish Mitra](https://dblp.org/pid/30/4561.html)
-	✅ Presents [E-QED](../Tools/E-QED.md)
+	✅ Presents [E-QED](../Tools/Not-verifiers/E-QED.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63390-9_11) Abstract Interpretation with Unfoldings.
 	[Marcelo Sousa](https://dblp.org/pid/123/7772.html), [César Rodríguez](https://dblp.org/pid/74/9958.html), [Vijay D'Silva](https://dblp.org/pid/17/4551.html), [Daniel Kroening](https://dblp.org/pid/k/DanielKroening.html)
 	✅ Presents [[APOET]], extends [POET](POET.md)
