Extended tool pages: FACT and Faial

--- a/Conferences/CAV 2021.md
+++ b/Conferences/CAV 2021.md
@@ -42,7 +42,7 @@
 	✅ Implementation doesn't seem to have a name? https://github.com/Practical-Formal-Methods/clam-racetrack
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_19) Checking Data-Race Freedom of GPU Kernels, Compositionally.
 	[Tiago Cogumbreiro](https://dblp.org/pid/94/7128.html), [Julien Lange](https://dblp.org/pid/96/7159.html), [Dennis Liew Zhen Rong](https://dblp.org/pid/297/3624.html), [Hannah Zicarelli](https://dblp.org/pid/297/3355.html)
-	✅ Presents [[Faial]]
+	✅ Presents [Faial](../Tools/Faial.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_4) Programmable Program Synthesis.
 	[Loris D'Antoni](https://dblp.org/pid/85/770.html), [Qinheping Hu](https://dblp.org/pid/201/4822.html), [Jinwoo Kim](https://dblp.org/pid/85/1809.html), [Thomas W. Reps](https://dblp.org/pid/r/TWReps.html)
 	❌ None
