Extended tool pages: IAM Access Analyzer, IMITATOR, InterpChecker, Isla, Ivy, JDart, iRankFinder

--- a/Conferences/CAV 2017(2).md
+++ b/Conferences/CAV 2017(2).md
@@ -12,7 +12,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63390-9_32) On Multiphase-Linear Ranking Functions.
 	[Amir M. Ben-Amram](https://dblp.org/pid/b/AMBenAmram.html), [Samir Genaim](https://dblp.org/pid/24/2865.html)
-	✅ Extends [[iRankFinder]]
+	✅ Extends [iRankFinder](../Tools/iRankFinder.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63390-9_28) Proving Linearizability Using Forward Simulations.
 	[Ahmed Bouajjani](https://dblp.org/pid/b/AhmedBouajjani.html), [Michael Emmi](https://dblp.org/pid/76/5819.html), [Constantin Enea](https://dblp.org/pid/72/2839.html), [Suha Orhun Mutluergil](https://dblp.org/pid/170/4198.html)
 	❌ None
