Extended tool pages: S3#, SCHMIT, SCInfer, SGR(k), SISBMI, SceneChecker, Scoot, SeQuaiA, Sketcham, Skink

--- a/Conferences/CAV 2017(2).md
+++ b/Conferences/CAV 2017(2).md
@@ -93,7 +93,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-63390-9_21) Model Counting for Recursively-Defined Strings.
 	[Minh-Thai Trinh](https://dblp.org/pid/78/9861.html), [Duc-Hiep Chu](https://dblp.org/pid/29/10300.html), [Joxan Jaffar](https://dblp.org/pid/j/JoxanJaffar.html)
-	✅ Presents [S3#](S3sharp.md)
+	✅ Presents [S3#](../Tools/Solvers/S3sharp.md)
 -	[🔓](https://doi.org/10.1007/978-3-319-63390-9_30) Automating Induction for Solving Horn Clauses.
 	[Hiroshi Unno ](https://dblp.org/pid/24/6058.html), [Sho Torii](https://dblp.org/pid/188/6225.html), [Hiroki Sakamoto](https://dblp.org/pid/159/4524.html)
 	✅ Extends [[RCaml]]
