Continue classification (only 317 to do, almost done!)

--- a/Tools/Solvers/SMT/Z3.md
+++ b/Tools/Solvers/SMT/Z3.md
@@ -39,3 +39,7 @@ https://doi.org/10.1007/978-3-662-46681-0_14 (TACAS '15)
 See also: https://github.com/Z3Prover/z3/wiki/Publications
 
 #### Related tools (tools mentioned or compared to in the paper):
+
+#### Meta
+:: SMT
+:: PV4 :: produces a satisfiability result for a formula
