--- a/Tools/T2.md
+++ b/Tools/T2.md
@@ -51,6 +51,6 @@ https://doi.org/10.1007/978-3-662-49674-9_22 (TACAS '16)
 [[Q'ARMC]]: tool that can automatically prove CTL properties of infinite-state programs
 
 #### Meta
-:: Termination:
+:: Termination
 :: LTL
 :: CTL
