Classified and tagged some tools

--- a/Tools/T2.md
+++ b/Tools/T2.md
@@ -55,3 +55,4 @@ https://doi.org/10.1007/978-3-662-49674-9_22 (TACAS '16)
 :: Termination
 :: LTL
 :: CTL
+:: PV3 :: can check termination or user-specified properties of LLVM code
