Fix whitespace in title links and 'null' titles

--- a/Tools/T2.md
+++ b/Tools/T2.md
@@ -43,8 +43,7 @@ Repository: https://github.com/mmjb/T2
 
 #### List of related papers:
 [Certifying Safety and Termination Proofs for Integer Transition Systems](https://doi.org/10.1007/978-3-319-63046-5_28) (CADE '17)
-[
-      T2: Temporal Property Verification](https://doi.org/10.1007/978-3-662-49674-9_22) (TACAS '16)
+[T2: Temporal Property Verification](https://doi.org/10.1007/978-3-662-49674-9_22) (TACAS '16)
 
 #### Related tools (tools mentioned or compared to in the paper):
 [[KITTeL]]: can prove termination and temporal properties
