[feat] add/update last commit date and last activity date

--- a/Tools/T2.md
+++ b/Tools/T2.md
@@ -36,7 +36,8 @@ Uses [Z3](Solvers/SMT/Z3.md).
 Repository: https://github.com/mmjb/T2
 
 #### Last commit date:
-12 February 2018
+12 Feb 2018 (default branch)
+12 Feb 2018 (last activity)
 
 #### Last publication date:
 11 July 2017
