Add HyPA and NIS

--- a/Conferences/CAV 2022.md
+++ b/Conferences/CAV 2022.md
@@ -24,10 +24,10 @@
 	✅ Nameless prototype implementation.
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_17) Software Verification of Hyperproperties Beyond k-Safety.
 	[Raven Beutner](https://dblp.org/pid/244/2160.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html)
-	⚙
+	✅ Presents [HyPA](../Tools/HyPA)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_14) Data-driven Numerical Invariant Synthesis with Automatic Generation of Attributes.
 	[Ahmed Bouajjani](https://dblp.org/pid/b/AhmedBouajjani.html), [Wael-Amine Boutglay](https://dblp.org/pid/321/4233.html), [Peter Habermehl](https://dblp.org/pid/22/639.html)
-	⚙️
+	✅ Presents [NIS](../Tools/Synthesiser/NIS.md)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_11) Neural Network Robustness as a Verification Property: A Principled Case Study.
 	[Marco Casadio](https://dblp.org/pid/158/5741.html), [Ekaterina Komendantskaya](https://dblp.org/pid/62/4310.html), [Matthew L. Daggitt](https://dblp.org/pid/222/4171.html), [Wen Kokke](https://dblp.org/pid/206/7258.html), [Guy Katz](https://dblp.org/pid/23/10321.html), [Guy Amir](https://dblp.org/pid/277/9596.html), [Idan Refaeli](https://dblp.org/pid/304/4372.html)
 	⚙️
