Add some tools from CAV '22 proceedings

--- a/Conferences/CAV 2022.md
+++ b/Conferences/CAV 2022.md
@@ -39,22 +39,24 @@
 	✅  [LEGION](../Tools/LEGION.md)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_5) Does a Program Yield the Right Distribution? - Verifying Probabilistic Programs via Generating Functions.
 	[Mingshuai Chen](https://dblp.org/pid/169/1207.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Lutz Klinkenberg](https://dblp.org/pid/270/1762.html), [Tobias Winkler](https://dblp.org/pid/66/750.html)
-	⚙️
+	✅ Presents [PRODIGY](../Tools/PRODIGY.md)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_20) Explaining Hyperproperty Violations.
 	[Norine Coenen](https://dblp.org/pid/167/7922.html), [Raimund Dachselt](https://dblp.org/pid/45/4302.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Hadar Frenkel](https://dblp.org/pid/199/3308.html), [Christopher Hahn](https://dblp.org/pid/91/9661.html), [Tom Horak](https://dblp.org/pid/154/1063.html), [Niklas Metzger ](https://dblp.org/pid/296/4267.html), [Julian Siber](https://dblp.org/pid/293/9557.html)
-	⚙️
+	✅  Nameless prototype, expands [MCHyper](../Tools/Checkers/MCHyper.md)
+	Artifact: https://doi.org/10.6084/m9.figshare.19690858.v8
+	Repository: https://github.com/reactive-systems/explaining-hyperproperty-violations
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_19) PoS4MPC: Automated Security Policy Synthesis for Secure Multi-party Computation.
 	[Yuxin Fan](https://dblp.org/pid/218/3103.html), [Fu Song](https://dblp.org/pid/09/10016.html), [Taolue Chen](https://dblp.org/pid/28/4743.html), [Liangfeng Zhang](https://dblp.org/pid/326/1182.html), [Wanwei Liu](https://dblp.org/pid/04/5600.html)
-	⚙️
+	✅  [PoS4MPC](../Tools/Synthesiser/PoS4MPC.md)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_7) Shared Certificates for Neural Network Verification.
 	[Marc Fischer ](https://dblp.org/pid/37/9373-2.html), [Christian Sprecher](https://dblp.org/pid/213/7806.html), [Dimitar I. Dimitrov](https://dblp.org/pid/271/0915.html), [Gagandeep Singh ](https://dblp.org/pid/64/3747-1.html), [Martin T. Vechev](https://dblp.org/pid/93/2189.html)
-	⚙️
+	✅  Nameless prototype, repo: https://github.com/eth-sri/proof-sharing
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_18) A Scalable Shannon Entropy Estimator.
 	[Priyanka Golia](https://dblp.org/pid/265/6125.html), [Brendan Juba](https://dblp.org/pid/62/6079.html), [Kuldeep S. Meel](https://dblp.org/pid/129/1623.html)
-	⚙️
+	✅  Presents [EntropyEstimation](../Tools/EntropyEstimation.md)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_25) RINO: Robust INner and Outer Approximated Reachability of Neural Networks Controlled Systems.
 	[Eric Goubault](https://dblp.org/pid/90/1132.html), [Sylvie Putot](https://dblp.org/pid/61/1269.html)
-	⚙️
+	✅  Presents [RINO](../Tools/RINO.md)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-031-13185-1_2) Program Verification with Constrained Horn Clauses (Invited Paper).
 	[Arie Gurfinkel](https://dblp.org/pid/44/3532.html)
 	⚙️
